Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -37,46 +37,38 @@ ul{
     display:flex;
     justify-content: center;
     color: #e5e7eb;
-    padding:  60px 10%;
-    padding-top: 10px;
+    padding:  5% 10%; 
 }
 .hero img{
-    height: auto;
-    width:60%;
-    max-width: 30vw;
+    height:18vw;
+    width:30vw;
     background-color:#e5e7eb;
     border-radius:1vw;
-    border:1px solid #1F2937;
     align-self: center;
 }
 .hero-text{
     display:flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 20px;
-    padding-right: 20px;
+    padding:0px 20px;
+    margin: 0;
     text-align: left;
-    border:1px solid #1F2937;
-    text-overflow: ellipsis;
     font-size: 1.5vw;
+    gap:10%;
 }
 .hero-text h2{
-    font-size: 2vw;
+    font-size: 2;
     margin: 0px ;
 }
 .hero-text button{
     background-color: #3882f6;
     border-radius:0.5vw;
-    border:1px solid #1F2937;
+    border:1px transparent;
     color: white;
     padding:2% 5%;
     margin: 0px;
-    align-content: center;
     height:fit-content;
     font-size: 1.5vw;
-    
-    
-
 }
 .why{
     display:flex;
@@ -86,7 +78,6 @@ ul{
     align-items: center;
     max-height:5%;
     color:#1F2937;
-
 }
 .why h2{
     font-size: 3vw;
@@ -97,7 +88,6 @@ ul{
     gap:5%;
     margin: 10px 50px;
     justify-content: space-around;
-
 }
 .how{
     display:flex;
@@ -108,7 +98,6 @@ ul{
     flex:1;
     background-color: #e4daa1;
     color:#1F2937;
-
 }
 .how h2{
     font-size: 3vw;
@@ -118,28 +107,23 @@ ul{
     display: flex;
     gap:5%;
     margin: 10px 50px;
-
 }
 .block{
     display: flex;
     flex-direction: column;
-    justify-self: center;
-    
+    justify-self: center;   
 }
 .block img{
     display: flex;
     justify-content: space-evenly;
     border-radius:1vw;
-    border:1px solid #1F2937;
     background-color:#e5e7eb;
     margin: 0px;
     object-fit: cover;
     object-position: 50% 10%;
     aspect-ratio: 1;
     width:100%;
-    max-width:20vw;   
-    
-   
+    max-width:20vw;     
 }
 .block p{
     text-align: center;
@@ -149,13 +133,12 @@ ul{
 .call{
     background-color: #3882f6;
     border-radius:1vw;
-    border:1px solid white;
+    border:1px transparent;
     display: flex;
     padding: 2% 5%;
     justify-content: space-between;
     color:#e5e7eb;
     max-height:5%;
-
 }
 .message-block{
     display: flex;
@@ -165,40 +148,37 @@ ul{
 
 .message-bold{
     font-weight: bold;
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     text-align: left;
 }
 
 .message{
-    font-size: 1vw;
+    font-size: 1.2vw;
     text-align: left;
 }
 .message-block p{
     margin: 0px;
-    padding: 2px 0;
+    padding: 0.5vw 0;
     
 }
 .footer button{
     background-color: #3882f6;
     border-radius:0.5vw;
-    border:1px solid white;
+    border:0.1vw solid white;
     color: white;
     padding:1vw 2vw;
     margin: 0px;
     justify-self: flex-end;
     height:fit-content;
     align-self:center ;
-    font-size: 1vw;
-    
+    font-size: 1vw;   
 }
 .footer{
     margin:0 10%;
     flex:0;
     align-content: stretch;
     justify-content: center;
-    padding: 2%;
-    
-    
+    padding: 2%;   
 }
 
 .disclaimer{
@@ -206,9 +186,7 @@ ul{
     flex:0;
     align-content: stretch;
     justify-content: center;
-    background-color: #e5e7eb;
-    
-    
+    background-color: #e5e7eb;  
 }
 .disclaimer p{
     justify-content: flex-end;
@@ -226,8 +204,7 @@ body{
     color: aqua;
     padding: 0;
     margin:0;
-    text-align:center;
-    
+    text-align:center;   
 }
 
 .quote-block{
@@ -235,15 +212,12 @@ body{
     font-family: serif;
     background-color: #e5e7eb;
     flex-direction: column;
-    /* font-weight: lighter; */
-    /* align-items: center; */
-    flex:0;
+    font-weight: 300;
     padding: 0 10%;
     justify-items: flex-end;
 }
 
-.quote{
-    
+.quote{ 
     font-size: 3vw;
     font-style: italic;
     font-weight: 100;
@@ -251,8 +225,7 @@ body{
     padding-top:10%;
     margin: 0px;
     text-align: center;
-    flex:0;
-    
+    flex:0;   
 }
 
 .quoter{
@@ -260,10 +233,7 @@ body{
     font-size: 2vw;
     padding-top: 0%;
     padding-bottom:10%;
-    
     text-align:right;
-    
     font-weight: bold;
-    color: #1F2937;
-    
+    color: #1F2937;  
 }
